guestbook-go/guestbook-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: guestbook
spec:
  replicas: 3
  selector:
    matchLabels:
      app: guestbook
  template:
      metadata:
         labels:
          app: guestbook
      spec:
        containers:
        - name: guestbook
          image: docker.io/lcwyo/guestbook:v3
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 3000
