guestbook-go/guestbook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
spec:
  selector:
    app: guestbook
  ports:
  - port: 3000
    targetPort: 3000
