guestbook-go/guestbook-ingress.yaml
apiVersion:  networking.k8s.io/v1
kind:  Ingress
metadata:
  annotations:
      nginx.ingress.kubernetes.io/ssl-redirect:  "false"
  name: guestbook-ingress
spec:
  ingressClassName:  cmy-shared
  rules:
    - host:  guestbook.cloud.eu1.cloudmobility.io
      http:
          paths:
            - backend:
                  service:
                      name:  guestbook
                      port:
                          number:  3000
              path:      /
              pathType:  ImplementationSpecific
  tls:
    - hosts:
        - guestbook.cloud.eu1.cloudmobility.io
